@@ -121,6 +121,7 @@ module I = struct
   let call x = emit (CALL x)
   let cdq () = emit CDQ
   let cmp x y = emit (CMP (x, y))
+  let cmpsd cond x y = emit (CMPSD (cond, x, y))
   let comisd x y = emit (COMISD (x, y))
   let cqo () = emit CQO
   let cvtsd2ss x y = emit (CVTSD2SS (x, y))
@@ -180,12 +181,14 @@ module I = struct
   let lea x y = emit (LEA (x, y))
   let mov x y = emit (MOV (x, y))
   let movapd x y = emit (MOVAPD (x, y))
+  let movd x y = emit (MOVD (x, y))
   let movsd x y = emit (MOVSD (x, y))
   let movss x y = emit (MOVSS (x, y))
   let movsx x y = emit (MOVSX (x, y))
   let movsxd x y = emit (MOVSXD  (x, y))
   let movzx x y = emit (MOVZX (x, y))
   let mulsd x y = emit (MULSD (x, y))
+  let neg x = emit (NEG x)
   let nop () = emit NOP
   let or_ x y = emit (OR (x, y))
   let pop x = emit (POP x)
